--- a/post.hbs
+++ b/post.hbs
@@ -43,6 +43,25 @@
                 </a>
             </section>
 
+
+<br />
+<style>
+<!--
+.fb-comments, .fb-comments * {
+    width:100% !important;
+    }
+-->
+</style>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=380770171984080";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+ 
+<div class="fb-comments" data-href="{{@blog.url}}{{url}}" data-width="470"></div>
         </footer>
 
         {{/post}}
