--- a/default.hbs
+++ b/default.hbs
@@ -52,7 +52,7 @@
         <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip">Subscribe!</span></a>
         <div class="inner">
              <section class="copyright">All content copyright <a href="/">{{@blog.title}}</a> &copy; 2013 &bull; All rights reserved.</section>
-             <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">&nbsp;</a><a href="http://ghost.org">Ghost</a> | <a href="https://github.com/polygonix/N-Coded">N'Coded</a> theme forked from <a href="http://ghost.org">Casper</a> by <a href="http://www.polygonix.com">Polygonix</a></section>
+             <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">&nbsp;</a><a href="http://ghost.org">Ghost</a> | <a href="https://github.com/polygonix/N-Coded">N'Coded</a></section>
         </div>
     </footer>
 
