--- a/default.hbs
+++ b/default.hbs
@@ -62,5 +62,24 @@
     {{! The main JavaScript file for Casper }}
     <script type="text/javascript" src="/assets/js/index.js"></script>
 
+
+    <!-- RefTagger from Logos. Visit http://www.logos.com/reftagger. 
+         This code should appear directly before the </body> tag.
+      -->
+    <script src="http://bible.logos.com/jsapi/referencetagging.js"
+        type="text/javascript"></script>
+    <script type="text/javascript">
+      Logos.ReferenceTagging.lbsBibleVersion = "ESV";
+      Logos.ReferenceTagging.lbsLinksOpenNewWindow = true;
+      Logos.ReferenceTagging.lbsAddLibronixDLSLink = false;
+      Logos.ReferenceTagging.lbsLogosBibleVersion = "DEFAULT";
+      Logos.ReferenceTagging.lbsLogosLinkIcon = "dark";
+      Logos.ReferenceTagging.lbsNoSearchTagNames =
+          [ "h1", "h2", "h3", "h4", "h5", "h6" ];
+      Logos.ReferenceTagging.lbsTargetSite = "biblia";
+      Logos.ReferenceTagging.tag();
+    </script>
+    <!-- END RefTagger from Logos. -->
+
 </body>
 </html>
