--- a/default.hbs
+++ b/default.hbs
@@ -16,6 +16,9 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/highlight/styles/default.css">
     <script type="text/javascript" src="/assets/css/highlight/highlight.pack.js"></script>
 
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
