--- a/default.hbs
+++ b/default.hbs
@@ -36,12 +36,8 @@
             <div id="site-head-content">
 
                 <div class="blog-title-wrap"><div class="inner">
-                {{#if @blog.logo}}<a id="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
-                <h1 class="blog-title">{{@blog.title}}</h1>
-                </div></div>
+                <a href="{{@blog.url}}"><img src="/content/images/2013/Oct/ckxng2011-banner.gif" alt="Blog Logo" /></a>
 
-                <div class="blog-description-wrap"><div class="inner">
-                <h2 class="blog-description">{{@blog.description}}</h2>
                 </div></div>
 
             </div>
@@ -54,6 +50,11 @@
     <footer class="site-footer inner">
         <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip">Subscribe!</span></a>
         <div class="inner">
+             <section><a href="/ckxng">Ckxng</a> | 
+	       <a href="/website-design">Design</a> | 
+	       <a href="/contact">Contact</a> |
+	       <a href="/terms-of-service">Terms</a> | 
+	       <a href="/privacy-policy">Privacy</a></section>
              <section class="copyright">All content copyright <a href="/">{{@blog.title}}</a> &copy; 2013 &bull; All rights reserved.</section>
              <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">&nbsp;</a><a href="http://ghost.org">Ghost</a> | <a href="https://github.com/polygonix/N-Coded">N'Coded</a></section>
         </div>
