Switch back to simple banner

--- a/default.hbs
+++ b/default.hbs
@@ -36,7 +36,7 @@
             <div id="site-head-content">
 
                 <div class="blog-title-wrap"><div class="inner">
-                <a href="{{@blog.url}}"><img src="/content/images/2013/Oct/ckxng2011-banner.gif" alt="Blog Logo" /></a>
+                <a href="{{@blog.url}}"><img src="/content/images/2013/Oct/ckxng.png" alt="Blog Logo" /></a>
 
                 </div></div>
 
