add seal to page bottom

--- a/default.hbs
+++ b/default.hbs
@@ -50,6 +50,7 @@
     <footer class="site-footer inner">
         <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip">Subscribe!</span></a>
         <div class="inner">
+             <section><img src="/content/images/2015/06/seal_cck_64.png" /></section>
              <section><a href="/ckxng">Ckxng</a> | 
 	       <a href="/website-design">Design</a> | 
 	       <a href="/contact">Contact</a> |
